--- a/GestionPOA/Web.config
+++ b/GestionPOA/Web.config
@@ -72,7 +72,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="PEDIEntities" connectionString="metadata=res://*/Models.EntityPOA.csdl|res://*/Models.EntityPOA.ssdl|res://*/Models.EntityPOA.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.25.200;initial catalog=PEDI;user id=sa;password=espam2013$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+ 
+<connectionStrings><add name="PEDIEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.25.200;initial catalog=PEDI;user id=sa;password=espam2013$;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
