--- a/GestionPOA/GestionPOA.csproj
+++ b/GestionPOA/GestionPOA.csproj
@@ -429,6 +429,7 @@
     <Content Include="Views\Admin\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App\Views\planificacion\" />
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
