--- a/GestionPOA/GestionPOA.csproj
+++ b/GestionPOA/GestionPOA.csproj
@@ -151,6 +151,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccionesController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\EstrategiasController.cs" />
     <Compile Include="Controllers\IndicadoresController.cs" />
     <Compile Include="Controllers\ObjetivosEspecificosController.cs" />
     <Compile Include="Controllers\ObjetivosEstrategicosController.cs" />
@@ -224,6 +225,9 @@
     <Compile Include="Models\spLoginIngreso_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\spObjetivosEspecificosbyDepartamento_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Subsistema.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -243,13 +247,16 @@
     <Content Include=".gitignore" />
     <Content Include="App\app.js" />
     <Content Include="App\Controller\AccionesController.js" />
+    <Content Include="App\Controller\EstrategiasController.js" />
     <Content Include="App\Controller\HomeController.js" />
     <Content Include="App\Controller\IndicadoresController.js" />
     <Content Include="App\Controller\LoginController.js" />
     <Content Include="App\Controller\ObjetivosEspecificosController.js" />
     <Content Include="App\Controller\ObjetivosEstrategicosController.js" />
+    <Content Include="App\Controller\PlanificacionController.js" />
     <Content Include="App\Controller\SubsistemasController.js" />
     <Content Include="App\Services\AccionesServices.js" />
+    <Content Include="App\Services\EstrategiasServices.js" />
     <Content Include="App\Services\IndicadoresServices.js" />
     <Content Include="App\Services\LoginServices.js" />
     <Content Include="App\Services\ObjetivosEspecificosServices.js" />
@@ -260,6 +267,7 @@
     <Content Include="App\Views\login\index.html" />
     <Content Include="App\Views\objetivoespecificos\index.html" />
     <Content Include="App\Views\objetivosestrategicos\index.html" />
+    <Content Include="App\Views\estrategias\index.html" />
     <Content Include="App\Views\subsistema\index.html" />
     <Content Include="Content\angular-datatables.min.css" />
     <Content Include="Content\assets\css\bootstrap.min.css" />
@@ -429,8 +437,8 @@
     <Content Include="Views\Admin\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App\Views\planificacion\" />
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Estrategias\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
