--- a/GestionPOA/GestionPOA.csproj
+++ b/GestionPOA/GestionPOA.csproj
@@ -229,6 +229,9 @@
     <Compile Include="Models\spEstrategiasDepartment_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\spIndicadoresDepartment_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\spLoginIngreso_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -282,6 +285,7 @@
     <Content Include="App\Views\indicadores\index.html" />
     <Content Include="App\Views\login\index.html" />
     <Content Include="App\Views\metas\index.html" />
+    <Content Include="App\Views\metas\nuevo.html" />
     <Content Include="App\Views\objetivoespecificos\index.html" />
     <Content Include="App\Views\objetivosestrategicos\index.html" />
     <Content Include="App\Views\estrategias\index.html" />
