--- a/GestionPOA/GestionPOA.csproj
+++ b/GestionPOA/GestionPOA.csproj
@@ -235,6 +235,9 @@
     <Compile Include="Models\spLoginIngreso_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\spMetaAndEjecucion_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\spMetaAndProgramaciones_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
