HU19 T19.02 Codificar la funcionalidad para subir una evidencia por cada meta

--- a/GestionPOA/GestionPOA.csproj
+++ b/GestionPOA/GestionPOA.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Controllers\AccionesController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\EstrategiasController.cs" />
+    <Compile Include="Controllers\EvidenciasController.cs" />
     <Compile Include="Controllers\IndicadoresController.cs" />
     <Compile Include="Controllers\IntervalosController.cs" />
     <Compile Include="Controllers\MetasController.cs" />
@@ -289,8 +290,10 @@
     <Content Include="App\Directivas\formatCurrency.js" />
     <Content Include="App\Directivas\loader.js" />
     <Content Include="App\Directivas\numbersOnly.js" />
+    <Content Include="App\Directivas\uploaderFile.js" />
     <Content Include="App\Services\AccionesServices.js" />
     <Content Include="App\Services\EstrategiasServices.js" />
+    <Content Include="App\Services\EvidenciasServices.js" />
     <Content Include="App\Services\IndicadoresServices.js" />
     <Content Include="App\Services\IntervalosServices.js" />
     <Content Include="App\Services\LoginServices.js" />
@@ -478,7 +481,8 @@
     <Content Include="Views\Admin\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\Evidencias\" />
+    <Folder Include="Views\Evidencias\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
