--- a/GestionPOA/GestionPOA.csproj
+++ b/GestionPOA/GestionPOA.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Controllers\IntervalosController.cs" />
     <Compile Include="Controllers\MetasController.cs" />
     <Compile Include="Controllers\MetasDepartamentoesController.cs" />
+    <Compile Include="Controllers\ObjeEspecificosDepartamentoesController.cs" />
     <Compile Include="Controllers\ObjetivosEspecificosController.cs" />
     <Compile Include="Controllers\ObjetivosEstrategicosController.cs" />
     <Compile Include="Controllers\PresupuestosController.cs" />
@@ -268,6 +269,9 @@
     <Compile Include="Models\spMetasDepartment_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\spObjetivoEspecificoDepartamentosAsignadosSelect_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\spObjetivosEspecificosbyDepartamento_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -313,6 +317,7 @@
     <Content Include="App\Controller\MetasController.js" />
     <Content Include="App\Controller\MetasDepartamentosController.js" />
     <Content Include="App\Controller\ObjetivosEspecificosController.js" />
+    <Content Include="App\Controller\ObjetivosEspecificosDepartamentosController.js" />
     <Content Include="App\Controller\ObjetivosEstrategicosController.js" />
     <Content Include="App\Controller\PlanificacionController.js" />
     <Content Include="App\Controller\SubsistemasController.js" />
@@ -330,6 +335,7 @@
     <Content Include="App\Services\LoginServices.js" />
     <Content Include="App\Services\MetasDepartamentosServices.js" />
     <Content Include="App\Services\MetasServices.js" />
+    <Content Include="App\Services\ObjetivosEspecificosDepartamentosServices.js" />
     <Content Include="App\Services\ObjetivosEspecificosServices.js" />
     <Content Include="App\Services\ObjetivosEstrategicosServices.js" />
     <Content Include="App\Services\ProgramacionesServices.js" />
@@ -516,6 +522,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Evidencias\" />
+    <Folder Include="Views\ObjeEspecificosDepartamentoes\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
