--- a/GestionPOA/GestionPOA.csproj
+++ b/GestionPOA/GestionPOA.csproj
@@ -238,6 +238,9 @@
     <Compile Include="Models\spDepartamentoConsult_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\spDepartamentoCorreoConsult_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\spEstrategiasbyDepartamentoandObjetivoEspecifico_Result.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
