diseño planificación PEDI en base a los periodos

--- a/GestionPOA/GestionPOA.csproj
+++ b/GestionPOA/GestionPOA.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Controllers\ObjetivosEspecificosController.cs" />
     <Compile Include="Controllers\ObjetivosEstrategicosController.cs" />
     <Compile Include="Controllers\PeriocidadesController.cs" />
+    <Compile Include="Controllers\PeriodosController.cs" />
     <Compile Include="Controllers\PlanificacionsController.cs" />
     <Compile Include="Controllers\PresupuestosController.cs" />
     <Compile Include="Controllers\ProgramacionsController.cs" />
@@ -357,6 +358,7 @@
     <Content Include="App\Controller\ObjetivosEspecificosDepartamentosController.js" />
     <Content Include="App\Controller\ObjetivosEstrategicosController.js" />
     <Content Include="App\Controller\PeriodicidadController.js" />
+    <Content Include="App\Controller\PeriodosController.js" />
     <Content Include="App\Controller\PlanificacionController.js" />
     <Content Include="App\Controller\SubsistemasController.js" />
     <Content Include="App\Directivas\decimalOnly.js" />
@@ -379,6 +381,7 @@
     <Content Include="App\Services\ObjetivosEspecificosServices.js" />
     <Content Include="App\Services\ObjetivosEstrategicosServices.js" />
     <Content Include="App\Services\PeriodicidadServices.js" />
+    <Content Include="App\Services\PeriodosServices.js" />
     <Content Include="App\Services\ProgramacionesServices.js" />
     <Content Include="App\Services\SubsistemasServices.js" />
     <Content Include="App\Views\acciones\index.html" />
@@ -397,6 +400,7 @@
     <Content Include="App\Views\objetivosestrategicos\index.html" />
     <Content Include="App\Views\estrategias\index.html" />
     <Content Include="App\Views\periodicidad\index.html" />
+    <Content Include="App\Views\periodo\index.html" />
     <Content Include="App\Views\subsistema\index.html" />
     <Content Include="Content\angular-datatables.min.css" />
     <Content Include="Content\assets\css\bootstrap.min.css" />
@@ -573,7 +577,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Evidencias\" />
-    <Folder Include="Views\Planificacions\" />
+    <Folder Include="Views\Periodos\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
